# aggligator

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: bins.yml  rust-clippy.yml  rust.yml
.misc/: aggligator.xcf  docs.sh  limit-bandwidth.nft  sync.sh
aggligator/: CHANGELOG.md  Cargo.toml  README.md
aggligator-monitor/: Cargo.toml  README.md
aggligator-monitor/src/: lib.rs  monitor.rs  speed.rs
aggligator-transport-bluer/: Cargo.toml  README.md
aggligator-transport-bluer/src/: lib.rs  rfcomm.rs  rfcomm_profile.rs
aggligator-transport-tcp/: Cargo.toml  README.md
aggligator-transport-tcp/src/: lib.rs  simple.rs  util.rs
aggligator-transport-usb/: CHANGELOG.md  Cargo.toml  README.md
aggligator-transport-usb/src/: lib.rs
aggligator-transport-websocket/: Cargo.toml  README.md
aggligator-transport-websocket-web/: Cargo.toml  README.md
aggligator-transport-websocket-web/.cargo/: config.toml
aggligator-transport-websocket-web/src/: lib.rs
aggligator-transport-websocket/src/: lib.rs
aggligator-transport-webusb/: CHANGELOG.md  Cargo.toml  README.md
aggligator-transport-webusb/src/: lib.rs  sleep.rs  thread_bound.rs
aggligator-util/: CHANGELOG.md  Cargo.toml  README.md
aggligator-util/src/: cli.rs  lib.rs  monitor.rs  speed.rs
aggligator-util/src/net/: adv.rs  mod.rs  tls.rs
aggligator-util/src/net/adv/: mod.rs  tls.rs
aggligator-util/src/transport/: acceptor.rs  connector.rs  mod.rs  rfcomm.rs  rfcomm_profile.rs  tcp.rs  tls.rs  usb.rs  websocket.rs
aggligator-wrapper-tls/: Cargo.toml  README.md
aggligator-wrapper-tls/src/: lib.rs
aggligator/src/: cfg.rs  connect.rs  control.rs  id.rs  io.rs  lib.rs  msg.rs  peekable_mpsc.rs  seq.rs
aggligator/src/agg/: dump.rs  link_int.rs  mod.rs  task.rs
aggligator/src/alc/: channel.rs  mod.rs  receiver.rs  sender.rs
aggligator/src/exec/: mod.rs
aggligator/src/exec/js/: mod.rs  runtime.rs  task.rs  time.rs
aggligator/src/exec/native/: mod.rs
aggligator/src/io/: codec.rs  mod.rs
aggligator/src/transport/: acceptor.rs  connector.rs  mod.rs
aggligator/tests/: multi_link.rs  single_link.rs
aggligator/tests/test_channel/: mod.rs
aggligator/tests/test_data/: mod.rs
analysis/: LinkLog.ipynb  PlotDump.ipynb
docs/: agg-speed.md  agg-tunnel.md
shared/: thread_bound.rs
