[package]
name = "aggligator-monitor"
version = "0.9.2"
description = "Aggligator link monitor and speed test"
categories = ["asynchronous", "network-programming"]
keywords = ["aggligator"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aggligator = { version = "0.9.2", path = "../aggligator" }

crossterm = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync"] }
tracing = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
