[package]
name = "aggligator-transport-bluer"
version = "0.1.1"
description = "Aggligator transport: Bluetooth on Linux"
categories = ["asynchronous", "network-programming"]
keywords = ["aggligator", "aggligator-transport"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aggligator = { version = "0.9.2", path = "../aggligator" }

async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

bluer = { version = "0.17", default-features = false, features = [
    "rfcomm",
    "bluetoothd",
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
