[package]
name = "aggligator-transport-usb"
version = "0.3.0"
description = "Aggligator transport: USB"
categories = ["asynchronous", "network-programming"]
keywords = ["aggligator", "aggligator-transport"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["host"]
host = ["upc/host", "rusb"]
device = ["upc/device", "usb-gadget"]

[dependencies]
aggligator = { version = "0.9.4", path = "../aggligator" }

async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

rusb = { version = "0.9", optional = true }
upc = { version = "0.7", optional = true }
usb-gadget = { version = "0.7", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
