[package]
name = "aggligator-transport-usb"
version = "0.4.0-beta2"
description = "Aggligator transport: USB"
categories = ["asynchronous", "network-programming"]
keywords = ["aggligator", "aggligator-transport"]
readme = "README.md"
edition.workspace = true
rust-version = "1.85"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["host"]
host = ["upc/host", "dep:nusb"]
device = ["upc/device", "usb-gadget"]

[dependencies]
aggligator = { version = "0.9.6", path = "../aggligator" }

async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

nusb = { version = "=0.2.0-beta.2", optional = true }
upc = { version = "=0.8.0-beta5", optional = true }
usb-gadget = { version = "0.7", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
