[package]
name = "aggligator-transport-usb"
version = "0.6.0"
description = "Aggligator transport: USB"
categories = ["asynchronous", "network-programming"]
keywords = ["aggligator", "aggligator-transport"]
readme = "README.md"
edition.workspace = true
rust-version = "1.89"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["host"]
host = ["upc/host", "dep:nusb"]
device = ["upc/device", "usb-gadget"]

[dependencies]
aggligator = { version = "0.9.9", path = "../aggligator" }

async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

nusb = { version = "0.2", optional = true }
upc = { version = "0.10", optional = true }
usb-gadget = { version = "1.1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
