[package]
name = "aggligator-transport-websocket-web"
version = "0.4.0"
description = "Aggligator transport: WebSocket for the web targeting WebAssembly"
categories = ["asynchronous", "web-programming::websocket", "wasm"]
keywords = ["aggligator", "aggligator-transport", "websocket"]
readme = "README.md"
edition = "2021"
rust-version = "1.80"
authors = ["Sebastian Urban <surban@surban.net>"]
license = "Apache-2.0"
repository = "https://github.com/surban/aggligator"

[dependencies]
aggligator = { version = "0.9.4", path = "../aggligator", features = ["js"] }

async-trait = "0.1"
bytes = "1"
futures = "0.3"
tracing = "0.1"
threadporter = "0.1"
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }

websocket-web = "0.1.7"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-unknown-unknown"]
