[package]
name = "aggligator-transport-websocket"
version = "0.5.1"
description = "Aggligator transport: WebSocket"
categories = ["asynchronous", "network-programming"]
keywords = ["aggligator", "aggligator-transport"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aggligator = { version = "0.9.7", path = "../aggligator" }
aggligator-transport-tcp = { version = "0.2.4", path = "../aggligator-transport-tcp", default-features = false }

async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["net", "sync"] }

axum = { version = "0.8", features = ["ws"] }
bytes = "1"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
tungstenite = "0.27"
url = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
