[package]
name = "aggligator-util"
version = "0.18.2"
description = "Aggligator command line utilities"
categories = ["network-programming", "command-line-utilities"]
keywords = ["aggligator", "multipath", "multiplex", "tcp", "mptcp"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
bluer = ["dep:aggligator-transport-bluer"]
usb-device = ["aggligator-transport-usb/device"]
usb-host = ["aggligator-transport-usb/host"]
raw-speed-cli = []

[dependencies]
aggligator = { version = "0.9.4", path = "../aggligator", features = ["dump"] }
aggligator-monitor = { version = "0.9.0", path = "../aggligator-monitor" }
aggligator-transport-bluer = { version = "0.1.0", path = "../aggligator-transport-bluer", optional = true }
aggligator-transport-tcp = { version = "0.2.0", path = "../aggligator-transport-tcp" }
aggligator-transport-usb = { version = "0.3.0", path = "../aggligator-transport-usb", optional = true }
aggligator-transport-websocket = { version = "0.3.0", path = "../aggligator-transport-websocket" }
aggligator-wrapper-tls = { version = "0.2.0", path = "../aggligator-wrapper-tls" }

async-trait = { workspace = true }
bytes = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "fmt",
] }

anyhow = "1"
axum-server = "0.7"
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
clap-markdown = "0.1"
gethostname = "1"
network-interface = "2"
rustls = "0.23"
rustls-pemfile = "2.0"
socket2 = "0.5"
tracing-log = "0.2"

[[bin]]
name = "agg-speed"

[[bin]]
name = "agg-tunnel"

[[bin]]
name = "raw-speed"
required-features = ["raw-speed-cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
