[package]
name = "aggligator"
version = "0.8.0"
edition = "2021"
rust-version = "1.65"
authors = ["Sebastian Urban <surban@surban.net>"]
description = "Aggregates multiple links (TCP or similar) into one connection having their combined bandwidth and provides resiliency against failure of individual links."
categories = ["asynchronous", "network-programming"]
keywords = ["multi-link", "multipath", "connection", "resilient", "redundant"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/surban/aggligator"

[features]
default = []
dump = ["serde", "serde_json", "tokio/fs", "tokio/io-util"]

[dependencies]
futures = "0.3"
tokio = { version = "1.19", features = ["time", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
byteorder = "1.4"
tracing = "0.1"
bytes = "1.1"
rand = "0.8"
rand_xoshiro = "0.6"
atomic_refcell = "0.1.8"
x25519-dalek = "1.2"
rand_core = "0.5"
crc32fast = "1.3"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1.19", features = ["rt", "rt-multi-thread"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
