[package]
name = "aggligator"
version = "0.8.3"
edition = "2021"
rust-version = "1.80"
authors = ["Sebastian Urban <surban@surban.net>"]
description = "Aggregates multiple links (TCP or similar) into one connection having their combined bandwidth and provides resiliency against failure of individual links."
categories = ["asynchronous", "network-programming"]
keywords = ["multi-link", "multipath", "connection", "resilient", "redundant"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/surban/aggligator"

[features]
default = []
dump = ["serde", "serde_json", "tokio/fs", "tokio/io-util"]
js = [
    "dep:getrandom",
    "dep:js-sys",
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]

[dependencies]
futures = "0.3"
tokio = { version = "1.19", features = ["rt", "time", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
byteorder = "1.4"
tracing = "0.1"
bytes = "1.1"
rand = "0.8"
rand_xoshiro = "0.6"
atomic_refcell = "0.1.8"
x25519-dalek = "2"
rand_core = "0.6"
crc32fast = "1.3"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Web support
getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3.72", optional = true }
web-sys = { version = "0.3.72", features = ["Performance", "Window", "WorkerGlobalScope"], optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
wasm-bindgen-futures = { version = "0.4.45", optional = true }

[dev-dependencies]
tokio = { version = "1.19", features = ["rt"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.19", features = ["rt-multi-thread"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.45"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
